# RAG01

./: .gitignore  README.md  chunking.py  embedding.py  loadingLLM.ipynb  particao_sentenca.py  pyproject.toml  retrieval.py  settings.toml
Notebooks/: NILTONSEIXASRESPOSTAFINAL.ipynb  NiltonSeixasrespostaBEST.ipynb  TestesemSVD.ipynb  V2_BEST.ipynb  hellowworld.ipynb
app/: config.py  main.py
app/api/v1/: routes.py
app/api/v1/rag/: rag_api.py
app/models/: input.py  output.py
scripts/: leitura_pdf.py
