[project]
name = "rag01"
version = "0.1.0"
description = ""
authors = [
    {name = "Nilton Seixas"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pymupdf (>=1.25.2,<2.0.0)",
    "spacy (==3.8.3)",
    "sentence-transformers (>=3.4.0,<4.0.0)",
    "bitsandbytes (>=0.45.1,<0.46.0)",
    "accelerate (>=1.3.0,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "dynaconf (>=3.2.7,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "pathlib (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
